--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -14,15 +14,15 @@
                         class="icon-bar"></span> <span class="icon-bar"></span> <span
                         class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand glyphicon glyphicon-home" href="/home"> &raquo;</a>
+                <a class="navbar-brand glyphicon glyphicon-home" th:href="@{/home}"> &raquo;</a>
             </div>
             <form class="navbar-form navbar-left" th:action="@{/search}"
                   method="post">
                 <div class="form-group">
                     <input type="text" class="form-control tags" name="search"
-                           placeholder="Search for..." required="required"></input>
+                           th:placeholder="#{common.search}" required="required"/>
                 </div>
-                <button type="submit" class="btn btn-default">Search</button>
+                <button type="submit" class="btn btn-default" th:value="#{common.searchButton}">Search</button>
             </form>
             <div id="navbar" class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right">
@@ -32,7 +32,8 @@
                         <a class="navbar-brand glyphicon glyphicon-userForm" href="#"></a>
                         <!--th:href="@{'/'+${#authentication.name}}+'/home'" th:text="${#authentication.name}"-->
 
-                        <a class="navbar-brand glyphicon glyphicon-log-out" th:href="@{/logout}">Logout</a>
+                        <a class="navbar-brand glyphicon glyphicon-log-out" th:href="@{/logout}"
+                           th:text="#{common.logout}">Logout</a>
                         <a class="navbar-brand" href="?lang=ru">ru</a> <a
                             class="navbar-brand" href="?lang=en">en</a>
                     </div>
