--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -25,6 +25,7 @@
                            th:field="*{username}" autofocus=""/>
                 </div>
                 <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Error</p>
+                <div th:if="${existUsername != null}" th:text="#{user.existUsername}"></div>
                 <div class="form-group">
                     <input type="password" class="form-control text-center input-lg"
                            th:placeholder="#{user.form.password}" th:field="*{password}"/>
@@ -40,6 +41,7 @@
                            th:field="*{firstName}"/>
                 </div>
                 <p th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Error</p>
+                <div th:if="${existEmail != null}" th:text="#{user.existEmail}"></div>
                 <div class="form-group">
                     <input type="text" class="form-control text-center input-lg" th:placeholder="#{user.form.lastname}"
                            th:field="*{lastName}"/>
