--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Site Constructor</title>
+    <title>Blog Constructor</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet"
@@ -13,92 +13,8 @@
 <body>
 <div th:replace="header :: header">
 </div>
-<!--<div id="myCarousel" class="carousel slide" data-ride="carousel">-->
-    <!--&lt;!&ndash; Indicators &ndash;&gt;-->
-    <!--<ol class="carousel-indicators">-->
-        <!--<li data-target="#myCarousel" data-slide-to="0" class="active"></li>-->
-        <!--<li data-target="#myCarousel" data-slide-to="1"></li>-->
-    <!--</ol>-->
-
-    <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
-    <!--<div class="carousel-inner" role="listbox">-->
-        <!--<div class="item active">-->
-            <!--<img th:src="@{/resources/static/img/img1.jpg}" alt="Image" />-->
-            <!--<div class="carousel-caption">-->
-                <!--<h3>Develop sites</h3>-->
-                <!--<p>Easier... Better...</p>-->
-            <!--</div>-->
-        <!--</div>-->
-
-        <!--<div class="item">-->
-            <!--<img th:src="@{/resources/static/img/img2.jpg}" alt="Image" />-->
-            <!--<div class="carousel-caption">-->
-                <!--<h3>Make money</h3>-->
-                <!--<p>It's easy to be successful</p>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <!--&lt;!&ndash; Left and right controls &ndash;&gt;-->
-    <!--<a class="left carousel-control" href="#myCarousel" role="button"-->
-       <!--data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"-->
-                                <!--aria-hidden="true"></span> <span class="sr-only">Previous</span>-->
-    <!--</a> <a class="right carousel-control" href="#myCarousel" role="button"-->
-            <!--data-slide="next"> <span-->
-        <!--class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
-    <!--<span class="sr-only">Next</span>-->
-<!--</a>-->
-<!--</div>-->
-
 <p></p>
 <div class="container">
-    <!--<div class="row">-->
-        <!--<div class="col-md-6 well" style="background:#eee">-->
-
-            <!--&lt;!&ndash;<h4 class="text-center">Most popular sites</h4>&ndash;&gt;-->
-            <!--&lt;!&ndash;<table class="table table-hover">&ndash;&gt;-->
-                <!--&lt;!&ndash;<thead>&ndash;&gt;-->
-                <!--&lt;!&ndash;<tr>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th>№</th>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th>UserForm</th>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th>Site</th>&ndash;&gt;-->
-                <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-                <!--&lt;!&ndash;</thead>&ndash;&gt;-->
-                <!--&lt;!&ndash;<tbody>&ndash;&gt;-->
-                <!--&lt;!&ndash;<tr th:each="site,iterStat : ${sites}" class="clickable-row" th:onclick="'siteRedirect(\''  + ${site.username+'/'+site.id}+'\')'">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td th:text="${iterStat.index}+1">&ndash;&gt;-->
-                    <!--&lt;!&ndash;</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td th:text="${site.username}">&ndash;&gt;-->
-                    <!--&lt;!&ndash;</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td th:text="${site.siteName}">&ndash;&gt;-->
-                    <!--&lt;!&ndash;</td>&ndash;&gt;-->
-                <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-                <!--&lt;!&ndash;</tbody>&ndash;&gt;-->
-            <!--&lt;!&ndash;</table>&ndash;&gt;-->
-        <!--&lt;!&ndash;</div>&ndash;&gt;-->
-        <!--&lt;!&ndash;<div class="col-md-6 well" style="background:#eee">&ndash;&gt;-->
-            <!--&lt;!&ndash;<h4 class="text-center">Last created sites</h4>&ndash;&gt;-->
-            <!--&lt;!&ndash;<table class="table table-hover">&ndash;&gt;-->
-                <!--&lt;!&ndash;<thead>&ndash;&gt;-->
-                <!--&lt;!&ndash;<tr>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th>№</th>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th>UserForm</th>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<th>Site</th>&ndash;&gt;-->
-                <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-                <!--&lt;!&ndash;</thead>&ndash;&gt;-->
-                <!--&lt;!&ndash;<tbody>&ndash;&gt;-->
-                <!--&lt;!&ndash;<tr th:each="site,iterStat : ${sites}" class="clickable-row"  th:onclick="'siteRedirect(\''  + ${site.username+'/'+site.id}+'\')'">&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td th:text="${iterStat.index}+1">&ndash;&gt;-->
-                    <!--&lt;!&ndash;</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td th:text="${site.username}">&ndash;&gt;-->
-                    <!--&lt;!&ndash;</td>&ndash;&gt;-->
-                    <!--&lt;!&ndash;<td th:text="${site.siteName}">&ndash;&gt;-->
-                    <!--&lt;!&ndash;</td>&ndash;&gt;-->
-                <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-                <!--&lt;!&ndash;</tbody>&ndash;&gt;-->
-            <!--&lt;!&ndash;</table>&ndash;&gt;-->
-        <!--</div>-->
-    <!--</div>-->
 </div>
 </body>
 </html>
