--- a/src/main/resources/templates/newpage.html
+++ b/src/main/resources/templates/newpage.html
@@ -43,45 +43,7 @@
                     <div class="form-group">
                         <input id="template" type="hidden" name="numContainers" value="1"/>
                     </div>
-                    <div class="" style="border: solid 1px black; height: auto;padding:14px;margin-bottom: 10px">
-                        <div class="row">
-                            <div class="col-md-10">
-
-                                <div class="btn-default btn draggable-text"><span
-                                        class="for-span glyphicon glyphicon-font"></span>Text
-                                </div>
-                                <div class="btn-default btn draggable-video"><span
-                                        class="for-span glyphicon glyphicon-facetime-video"></span>Video
-                                </div>
-                                <div class="btn-default btn draggable-gallery"><span
-                                        class="for-span glyphicon glyphicon-picture"></span>Image
-                                </div>
-                                <div class="btn-default btn draggable-raiting"><span
-                                        class="for-span glyphicon glyphicon-thumbs-up"></span>Rating
-                                </div>
-                                <div class="btn-default btn draggable-comment"><span
-                                        class="for-span glyphicon glyphicon glyphicon-comment"></span>Comments
-                                </div>
-
-                            </div>
-                            <div class="col-md-2">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                                            aria-haspopup="true" aria-expanded="false">
-                                        Template <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a onclick="selectFirstTemplate()">1</a></li>
-                                        <li><a onclick="selectSecondTemplate()">2</a></li>
-                                        <li><a onclick="selectThirdTemplate()">3</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="dropableContainer">
-                        <div id="1" class="jumbotron droppable" style="border: solid 1px black; height: auto;"></div>
-                    </div>
+                    <textarea class="texteditor"></textarea>
                     <div class="" style="border: solid 1px black; height: auto;padding:14px;margin-bottom: 10px">
                         <div class="row">
                             <div class="col-md-2">
@@ -110,6 +72,8 @@
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script th:src="@{/js/jquery-impromptu.js}"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.5.7/jquery.tinymce.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.5.7/tinymce.min.js"></script>
 <script th:src="@{/js/template.js}"></script>
 <script th:src="@{/js/newpage.js}"></script>
 <script th:src="@{/js/disable.js}"></script>
