--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -47,6 +47,10 @@
             </ul>
         </nav>
         <div class="col-sm-10">
+            <div class="navbar-right" style="font-size: 17px;margin-right: 20px;">
+                <span class="btn glyphicon glyphicon-thumbs-up" style="font-size: 20px;" th:onclick="'like(\'' + ${pageId} + '\')'">
+                </span><text id="rating" th:text="${rating}"></text>
+            </div>
             <div id="content">
             </div>
         </div>
