--- a/src/main/resources/templates/editblog.html
+++ b/src/main/resources/templates/editblog.html
@@ -18,13 +18,8 @@
 </div>
 <div class="modal-dialog">
     <form class="col-md-12 center-block"
-          th:action="@{|~/${blog.username}/${blog.id}/edit|}"
+          th:action="@{'/'+${blog.username}+'/'+${blog.id}}+'/edit'"
           method="post">
-        <div class="form-group">
-            <input type="text" class="form-control input-lg"
-                   placeholder="Tags for your blog" name="tags" th:value="${tags}" required="required" pattern=".+$"
-                   title='One or more characters.Divide tags with ,'/>
-        </div>
         <div class="form-group">
             <label class="radio-inline"> <input type="radio"
                                                 name="typeTheme" value="black" th:checked="${blackTheme}"/> Black
@@ -50,7 +45,7 @@
             </div>
             <div class="col-md-3">
                 <a class="btn btn-block btn-lg btn-primary"
-                   th:href="@{|~/${#authentication.name}/home|}">Cancel</a>
+                   th:href="@{'/'+${#authentication.name}}+'/home'">Cancel</a>
             </div>
         </div>
     </form>
@@ -61,5 +56,7 @@
 <script type="text/javascript"
         src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script th:src="@{/js/user.js}"></script>
+<div th:replace="tags :: tags">
+</div>
 </body>
 </html>
