--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -15,11 +15,15 @@
                         class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand glyphicon glyphicon-home" th:href="@{/home}"> &raquo;</a>
+                <a class="navbar-brand" th:if="${usernameNav!=null}" th:href="@{'/'+${usernameNav}}+'/home'" th:text="${usernameNav + ' &raquo;'}"></a>
+                <a class="navbar-brand" th:if="${blogIdNav!=null}" th:href="@{'/'+${usernameNav}}+'/'+${blogIdNav}+'/home'" th:text="${blogNameNav + ' &raquo;'}"></a>
+                <a class="navbar-brand" th:if="${pageIdNav!=null}" th:href="@{'/'+${usernameNav}}+'/'+${blogIdNav}+'/'+${pageIdNav}" th:text="${pageNameNav + ' &raquo;'}"></a>
+
             </div>
             <form class="navbar-form navbar-left" th:action="@{/search}"
-                  method="post">
+                  method="get">
                 <div class="form-group">
-                    <input type="text" class="form-control tags" name="search"
+                    <input id="search" type="text" class="form-control tags" name="search"
                            th:placeholder="#{common.search}" required="required"/>
                 </div>
                 <button type="submit" class="btn btn-default" th:value="#{common.searchButton}">Search</button>
@@ -27,6 +31,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right">
                     <div sec:authorize="isAuthenticated()">
+                        <a class="navbar-brand glyphicon"  th:href="@{/feed}">Feed</a>
                         <a sec:authorize="hasRole('ROLE_ADMIN')" class="navbar-brand glyphicon glyphicon-cog"
                            href="/admin"></a>
                         <a class="navbar-brand glyphicon glyphicon-userForm" th:href="@{'/'+${#authentication.name}}+'/home'"
@@ -34,10 +39,11 @@
 
                         <a class="navbar-brand glyphicon glyphicon-log-out" th:href="@{/logout}"
                            th:text="#{common.logout}">Logout</a>
-                        <a class="navbar-brand" href="?lang=ru">ru</a> <a
-                            class="navbar-brand" href="?lang=en">en</a>
+                        <a class="navbar-brand glyphicon" href="?lang=ru">ru</a> <a
+                            class="navbar-brand glyphicon" href="?lang=en">en</a>
                     </div>
                     <div sec:authorize="isAnonymous()">
+                        <a class="navbar-brand glyphicon"  th:href="@{/feed}">Feed</a>
                         <a class="navbar-brand glyphicon glyphicon-log-in"
                            th:href="@{/login}">Login</a>
                         <a class="navbar-brand glyphicon glyphicon-globe"
