--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,5 +16,9 @@
 <p></p>
 <div class="container">
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<div th:replace="tags :: tags">
+</div>
 </body>
 </html>
