--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -8,6 +8,8 @@
     <title>Registration</title>
     <link rel="stylesheet"
           href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet"
+          href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css" />
 </head>
 <body>
 <div th:replace="header :: header">
@@ -61,6 +63,10 @@
             </form>
         </div>
     </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+<div th:replace="tags :: tags">
 </div>
 </body>
 </html>
